<resources>
    <string name="general_confirm">Confirm</string>
    <string name="general_confirm_exit">Confirm exit</string>
    <string name="general_confirm_exit_msg">Do you really want to exit Slide?</string>
    <string name="general_enable_shadowbox">Shadowbox mode</string>
    <string name="pro_upgrade_msg">Upgrade to Slide for Reddit Pro to enjoy some awesome new features including:\n\n- Ad Blocker and Reader Mode in Website view\n- Crop and draw on images to upload\n- Customizable tablet column mode\n- Automatic night mode\n- Shadowbox and Gallery content views\n- Comment Shadowbox view\n- Backup and restore to Google Drive and to file\n- Supporting open source and ad-free software!\n\nWould you like to support Slide for Reddit?</string>
    <string name="general_open_settings">Sidebar</string>
    <string name="general_sub_sync">Syncing subscriptions</string>
    <string name="general_gallerymode_ispro">Gallery mode is a Pro feature</string>
    <string name="general_cropdraw_ispro">Crop and Draw on Uploaded Images is a Pro feature</string>
    <string name="general_shadowbox_comments_ispro">Comment Shadowbox mode is a Pro feature</string>
    <string name="general_shadowbox_ispro">Shadowbox mode is a Pro feature</string>
    <string name="general_nighttheme_ispro">Automatic Night Mode is a Pro feature</string>
    <string name="general_backup_ispro">Settings backup is a Pro feature</string>
    <string name="general_multicolumn_ispro">Multi-Column Settings are a Pro feature</string>
    <string name="submission_info_unsaved">Submission unsaved</string>
    <string name="submission_info_saved">Submission saved</string>
    <string name="submission_info_archived">This is an archived post. You won\'t be able to vote or comment.</string>
    <string name="submission_post_saved">Post saved</string>
    <string name="submission_info_hidden">Post hidden forever</string>
    <string name="submission_stickied">Pinned</string>
    <string name="submission_link_copy">Copy URL</string>
    <string name="submission_link_share">Share URL</string>
    <string name="submission_share_title">Which link would you like to share?</string>
    <string name="submission_share_reddit">Reddit URL</string>
    <string name="submission_share_content">Content URL</string>
    <string name="submission_hide">Hide post</string>
    <string name="submission_report">Report post</string>
    <string name="submission_gild">Open in browser</string>
    <string name="submission_save">Save post</string>
    <string name="submission_save_image">Save image</string>
    <string name="submission_load_full">Load full thread</string>
    <string name="submission_np_link">This is a no participation link. Please don\'t vote or comment.</string>
    <string name="submission_tap_gif">Tap to load GIF</string>
    <string name="submission_not_found">Uh oh, post not found!</string>
    <string name="submission_not_found_msg">Sorry, this post could not be found</string>
    <string name="submission_copy_text">Copy text</string>
    <string name="submission_comment_saved">Comment saved</string>
    <string name="submission_comment_unsaved">Comment un-saved</string>
    <string name="submission_share_permalink">Share link</string>
    <string name="submission_comment_copied">Comment text copied</string>
    <string name="submission_text_copied">Submission text copied</string>
    <string name="submission_nocontent">Submission has no content</string>
    <string name="submission_link_copied">Link copied</string>
    <string name="submission_removed">Submission removed</string>
    <plurals name="new_messages">
        <item quantity="one">%d new message</item>
        <item quantity="other">%d new messages</item>
    </plurals>
    <plurals name="points">
        <item quantity="one">pt</item>
        <item quantity="other">pts</item>
    </plurals>
    <plurals name="comments">
        <item quantity="one">cmt</item>
        <item quantity="other">cmts</item>
    </plurals>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_black">AMOLED black</string>
    <string name="theme_dark_blue">Dark blue</string>
    <string name="night_mode">Night Mode</string>
    <string name="disabled">Disabled</string>
    <string name="manual">Manual</string>
    <string name="automatic">Automatic</string>
    <string name="theme_default_color">Primary color</string>
    <string name="theme_subreddit_color">Change color</string>
    <string name="theme_accent_color">Accent color</string>
    <string name="theme_base">Base theme</string>
    <string name="theme_card">Card</string>
    <string name="theme_sepia">Sepia</string>
    <string name="theme_amoled_contrast">AMOLED with contrast</string>
    <string name="theme_night">Night theme</string>
    <string name="font_size_comment">Comment font size</string>
    <string name="font_size_post">Post font size</string>
    <string name="font_size_huge">Huge</string>
    <string name="font_size_larger">Larger</string>
    <string name="font_size_large">Large</string>
    <string name="font_size_medium">Medium</string>
    <string name="font_size_small">Small</string>
    <string name="font_size_smaller">Smaller</string>
    <string name="font_size_tiny">Tiny</string>
    <string name="card_hide_post_button">“Hide post” button in actionbar</string>
    <string name="card_tint_outside">Only tint outside the subreddit</string>
    <string name="card_save_button">“Save post” button in actionbar</string>
    <string name="multi_column_title">Multi-column</string>
    <string name="multi_column_landscape">Landscape</string>
    <string name="multi_column_portrait">Dual columns in portrait mode</string>
    <string name="single_column_multi_window">Single column in multi-window mode</string>
    <string name="drawer_profile">You</string>
    <string name="drawer_support">Go Pro</string>
    <string name="drawer_goto_profile">Go to profile</string>
    <string name="drawer_add_account">Add an account</string>
    <string name="drawer_hello">Hello,</string>
    <string name="drawer_search">Go to subreddit</string>
    <string name="drawer_moderation">Moderation</string>
    <string name="drawer_offline">Slide is in offline mode</string>
    <string name="drawer_offline_retry">Try to enter online mode</string>
    <string name="drawer_guest_mode">Browse as guest</string>
    <string name="sidebar_wiki">Subreddit wiki</string>
    <string name="sidebar_mods">Subreddit moderators</string>
    <string name="profile_karma_total">Total karma</string>
    <string name="profile_karma_link">Post karma</string>
    <string name="profile_karma_comment">Comment karma</string>
    <string name="profile_message">Private message</string>
    <string name="profile_saved">Saved</string>
    <string name="profile_read_later">Read Later</string>
    <string name="profile_upvoted">Upvoted</string>
    <string name="profile_err_title">User not found</string>
    <string name="profile_err_msg">Reddit user could not be retrieved</string>
    <string name="profile_overview">Overview</string>
    <string name="profile_comments">Comments</string>
    <string name="profile_submitted">Submitted</string>
    <string name="profile_gilded">Gilded</string>
    <string name="profile_downvoted">Downvoted</string>
    <string name="profile_hidden">Hidden</string>
    <string name="profile_friend">Friend</string>
    <string name="profile_add_friend">Add friend</string>
    <string name="profile_remove_friend">Remove friend</string>
    <string name="profile_remove_account">Would you really like to remove this account?</string>
    <string name="profile_remove">Delete account</string>
    <string name="profile_history">History</string>
    <string name="profile_share">%s\'s profile</string>
    <string name="profile_age">Redditor for %s</string>
    <string name="profile_tag">Tag</string>
    <string name="profile_tag_set">Set tag for %s</string>
    <string name="profile_tag_user">Tag user</string>
    <string name="profile_tag_user_existing">User tagged as ‘%s’</string>
    <string name="profile_btn_tag">Set tag</string>
    <string name="profile_btn_untag">Remove tag</string>
    <string name="profile_info">Profile information</string>
    <string name="profile_block_user">Block user</string>
    <string name="comment_gild">Award comment</string>
    <string name="comment_share">Share comment</string>
    <string name="comment_delete">Delete comment</string>
    <string name="comment_delete_msg">Do you really want to delete this comment? This cannot be undone</string>
    <string name="comment_delete_err">Uh oh, something went wrong</string>
    <string name="comment_delete_err_msg">Would you like to try again?</string>
    <string name="comment_deleted">[deleted]</string>
    <string name="comment_unsave">Unsave</string>
    <string name="comment_load_more">Load %1$d more</string>
    <string name="comment_load_more_string_new">Load %1$s more</string>
    <string name="comment_loading_more">Loading more comments…</string>
    <string name="comment_permalink">Load comment permalink</string>
    <string name="comment_parent">Show parent comment</string>
    <string name="welcome_start">Get started</string>
    <string name="welcome_personalize">Personalize</string>
    <string name="sorting_choose">Choose a sorting type</string>
    <string name="sorting_time_choose">Choose a time frame</string>
    <string name="sorting_change_sorting">Sort mode</string>
    <string name="sorting_best">Best</string>
    <string name="sorting_top">Top</string>
    <string name="sorting_hot">Hot</string>
    <string name="sorting_ama">Q&amp;A (AMA)</string>
    <string name="sorting_new">New</string>
    <string name="sorting_old">Old</string>
    <string name="sorting_controversial">Controversial</string>
    <string name="sorting_rising">Rising</string>
    <string name="sorting_hour">hour</string>
    <string name="sorting_day">24 hours</string>
    <string name="sorting_week">week</string>
    <string name="sorting_month">month</string>
    <string name="sorting_year">year</string>
    <string name="sorting_all">all time</string>
    <string name="sorting_defaultfor">Default for /r/%1$s</string>
    <string name="editor_url">URL</string>
    <string name="editor_text">Text</string>
    <string name="editor_title_link">Insert link</string>
    <string name="editor_action_link">INSERT</string>
    <string name="editor_title">Title</string>
    <string name="editor_err_msg">Please try again in a few seconds</string>
    <string name="editor_uploading_image">Uploading image to Imgur</string>
    <string name="editor_upload_image_question">Upload image to Imgur?</string>
    <string name="editor_select_img">Select picture</string>
    <string name="editor_hint_optional_body">Text (optional)</string>
    <string name="editor_submit">Submit a post</string>
    <string name="editor_hint_subreddit">Subreddit</string>
    <string name="editor_finding_title">Finding the title</string>
    <string name="submit_findingflairs">Finding flairs</string>
    <string name="submit_flairchoices">/r/%s flairs</string>
    <string name="edit_selftext">Edit selftext</string>
    <string name="delete_submission">Delete submission</string>
    <string name="set_submission_flair">Set submission flair</string>
    <string name="editor_save_draft">Save draft</string>
    <string name="editor_chose_draft">Chose draft</string>
    <string name="btn_save">Save</string>
    <string name="settings_customapi_remove">REMOVE CUSTOM API</string>
    <string name="settings_customapi_redirect">REDIRECT_URL </string>
    <string name="settings_customapi_client">CLIENT_ID</string>
    <string name="settings_description_customapi">Use your own custom api to access and login to reddit</string>
    <string name="settings_warn_customapi">Restart the app to apply changes you make here</string>
</resources>