<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/settings_toolbar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/card_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:textSize="14sp"
                android:alpha=".5"
                android:text="@string/settings_description_customapi"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:focusableInTouchMode="true"
                android:descendantFocusability="beforeDescendants"
                android:paddingTop="16dp">

                <EditText
                    android:id="@+id/client_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/settings_customapi_client"
                    android:textColor="?attr/fontColor"
                    android:textColorHint="?attr/fontColor"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/redirect_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/settings_customapi_redirect"
                    android:textColor="?attr/fontColor"
                    android:textColorHint="?attr/fontColor"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/remove_customapi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/settings_customapi_remove" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/save_customapi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="16dp"
                        android:text="@string/btn_save" />
                </RelativeLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="20dp"
                android:textSize="14sp"
                android:alpha=".5"
                android:text="@string/settings_warn_customapi"
                android:layout_height="wrap_content"
                android:textColor="#FF0000" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
